# EUSIPCO-2025

./: CMakeLists.txt  README.md  anscombe.h  find_cubic_roots.h  main_blas.cpp  type_I.cpp  type_I.h  type_II.cpp  type_II.h  utils.cpp  utils.h
